@@ -14,6 +14,7 @@ arch ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 distdir = $(PACKAGE)-$(version)
 tarball = $(distdir).tar.gz
 instdir = inst-$(version)
+fullinstdir ?= $(shell cd $(top_srcdir) && pwd)/$(instdir)
 
 this:
 	@if [ ! -d debian ]; then echo "Wrong working dir `pwd`"; exit -1; fi
@@ -45,34 +46,34 @@ inplace:
 	echo "" >> debian/changelog
 	echo " -- $(fullname) <$(email)>  $(datum)" >> debian/changelog
 	./configure --prefix=/usr --mandir=/usr/share/man --libexecdir=/usr/lib --sysconfdir=/etc/X11/fvwm $(cparams)
-	fakeroot dh_testdir
-	fakeroot dh_testroot
-	fakeroot dh_clean
+	fakeroot dh_testdir -P$(fullinstdir)
+	fakeroot dh_testroot -P$(fullinstdir)
+	fakeroot dh_clean -P$(fullinstdir)
 	(cd .. && dpkg-source -b $(CURDIR))
-	fakeroot dh_testdir
-	fakeroot dh_testroot
+	fakeroot dh_testdir -P$(fullinstdir)
+	fakeroot dh_testroot -P$(fullinstdir)
 	$(MAKE) $(mparams)
-	$(MAKE) DESTDIR=`cd $(top_srcdir) && pwd`/$(instdir) install
-	-mkdir $(top_srcdir)/$(instdir)/etc
-	-mkdir $(top_srcdir)/$(instdir)/etc/menu-methods
-	cp debian/fvwm.menu-method $(top_srcdir)/$(instdir)/etc/menu-methods/fvwm
-	-mkdir $(top_srcdir)/$(instdir)/usr/lib/menu
-	cp debian/fvwm.menu $(top_srcdir)/$(instdir)/usr/lib/menu/fvwm
-	fakeroot dh_installchangelogs
-	fakeroot dh_installdocs
-	fakeroot dh_installmenu
-	fakeroot dh_link
-	fakeroot dh_strip
-	fakeroot dh_compress
-	fakeroot dh_fixperms
-	fakeroot dh_perl
-	fakeroot dh_installdeb
-	fakeroot dh_shlibdeps
-	fakeroot dh_gencontrol
-	fakeroot dh_md5sums
-	fakeroot dh_builddeb
+	$(MAKE) DESTDIR=$(fullinstdir) install
+	-mkdir $(fullinstdir)/etc
+	-mkdir $(fullinstdir)/etc/menu-methods
+	cp debian/fvwm.menu-method $(fullinstdir)/etc/menu-methods/fvwm
+	-mkdir $(fullinstdir)/usr/lib/menu
+	cp debian/fvwm.menu $(fullinstdir)/usr/lib/menu/fvwm
+	fakeroot dh_installchangelogs -P$(fullinstdir)
+	fakeroot dh_installdocs -P$(fullinstdir)
+	fakeroot dh_installmenu -P$(fullinstdir)
+	fakeroot dh_link -P$(fullinstdir)
+	fakeroot dh_strip -P$(fullinstdir)
+	fakeroot dh_compress -P$(fullinstdir)
+	fakeroot dh_fixperms -P$(fullinstdir)
+	fakeroot dh_perl -P$(fullinstdir)
+	fakeroot dh_installdeb -P$(fullinstdir)
+	fakeroot dh_shlibdeps -P$(fullinstdir)
+	fakeroot dh_gencontrol -P$(fullinstdir)
+	fakeroot dh_md5sums -P$(fullinstdir)
+	fakeroot dh_builddeb -P$(fullinstdir)
 	-@dpkg-genchanges > ../fvwm_$(version)-$(release)_$(arch).changes
 	-@debsign ../fvwm_$(version)-$(release)_$(arch).changes
-	fakeroot dh_clean
-	-rm -rf $(top_srcdir)/$(instdir)
+	fakeroot dh_clean -P$(fullinstdir)
+	-rm -rf $(fullinstdir)
 	(cd .. && ls fvwm_$(version)-$(release)*)
