@@ -1,3 +1,8 @@
+2003-10-31  Mikhael Goikhman  <migo@homemail.com>
+
+	* Makefile.am:
+	fixed deb creation
+
 2003-10-29  Mikhael Goikhman  <migo@homemail.com>
 
 	* Makefile.am:
